objects/XDO_Tool_Platform_Tracking_Event__e.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Identifier__c</fullName>
        <label>Asset Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Deterministic event date. Defaults to now</description>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Once__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this particular event action should only be recorded once</description>
        <label>Once?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Tracking Event</label>
    <pluralLabel>Tracking Events</pluralLabel>
</CustomObject>